<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_lunar"
                style="@style/btnStyle"
                android:text="@string/picker_custom_lunar"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_Time"
                style="@style/btnStyle"
                android:text="@string/picker_date_time"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_Options"
                style="@style/btnStyle"
                android:text="@string/picker_province"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_CustomTime"
                style="@style/btnStyle"
                android:text="@string/picker_custom_time"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_CustomOptions"
                style="@style/btnStyle"
                android:text="@string/picker_custom_province"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_no_linkage"
                style="@style/btnStyle"
                android:text="@string/picker_non_linkage"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_GotoJsonData"
                style="@style/btnStyle"
                android:text="@string/picker_json_parse_sample"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_fragment"
                style="@style/btnStyle"
                android:text="@string/picker_custom_parent"
                android:textAllCaps="false" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
